--- a/src/main/resources/MainViewInterface.fxml
+++ b/src/main/resources/MainViewInterface.fxml
@@ -115,10 +115,16 @@
             <Font name="AIGDT" size="18.0" />
          </font>
          <content>
-            <AnchorPane prefHeight="150.0" prefWidth="446.0">
+            <AnchorPane prefHeight="150.0" prefWidth="446.0" style="-fx-background-color: lightgrey;">
                <children>
-                  <Label fx:id="expression" alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="66.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="18.0" prefWidth="400.0" textAlignment="CENTER" />
-                  <Label fx:id="result" layoutX="334.0" layoutY="102.0" prefHeight="18.0" prefWidth="79.0" />
+                  <Label fx:id="expression" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="31.0" layoutY="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="51.0" prefWidth="398.0" style="-fx-border-color: black; -fx-background-color: white;" textAlignment="CENTER">
+                     <font>
+                        <Font size="28.0" />
+                     </font></Label>
+                  <Label fx:id="result" layoutX="267.0" layoutY="85.0" prefHeight="38.0" prefWidth="163.0" style="-fx-background-color: white; -fx-border-color: black;">
+                     <font>
+                        <Font size="17.0" />
+                     </font></Label>
                </children>
             </AnchorPane>
          </content>
